--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+1.movieId=1
+1.movieName="Poorvi"
+1.movieReleaseDate="23/05/1997"
 
+2.movieId=2
+2.movieName="deepak"
+2.movieReleaseDate="23/10/1996"
