--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 			<version>2.1.6.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.8</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 	</dependencies>
 
