--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-1.movieId=1
-1.movieName="Poorvi"
-1.movieReleaseDate="23/05/1997"
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://localhost:3306/Movie?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Root@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-2.movieId=2
-2.movieName="deepak"
-2.movieReleaseDate="23/10/1996"
