--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=service
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url = jdbc:mysql://localhost:3306/Movie?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
