--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-spring.profiles.active=service
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://localhost:3306/Movie?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Root@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.profiles.active=service,dev
+spring.h2.console.enabled=true
+
 
