--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			&lt;!&ndash;<scope>runtime</scope>&ndash;&gt;
-		</dependency>-->
+			<!--<scope>runtime</scope>-->
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
