--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=service,dev
+spring.profiles.active=service,prod
 spring.h2.console.enabled=true
+spring.devtools.restart.additional-paths=/resources
 
 
