--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=service,prod
 spring.h2.console.enabled=true
+management.endpoints.web.exposure.include=*
 spring.devtools.restart.additional-paths=/resources
 
 
